????? 1.4.4.3

    programmer visible changes:
    * utils.folder_listing renamed utils.disk_item_listing and moved to new file ls.py together with all ls helper functions.
        Added option to list a single file, report partial path instead of full path, and thorough documentation of the format options.


18/5/2017 1.4.4.2

    user visible changes client:
    * New variable CURRENT_DOIT_DESCRIPTION to allow meaningfull messages from doit actions
    programmer visible changes:
    * Reimplemented doit command using only database
    * IndexItemsTable.get_resolved_details_value results sorted by order they were inserted (IndexItemDetailRow._id)
    * New function SVNTable.get_item_case_insensitive implemented by Lev. Good for looking in the db for files that exist on disk.

    programmer visible changes:
    * Added , errors='namereplace' where ever text files are written. This will cause unicode characters that cannot be written
            (e.g. 'surrogates not allowed' error) to be replaced by their name (e.g. '\ud9fe')

30/4/2017 1.4.4.1

    * InstlDoIt.doit_for_item refactored to use db instead of install_definitions_index
    * Removed InstlDoIt.accumulate_unique_actions as it was not used
    * Fixed SearchPaths to use pathlib.Path to resolve paths, as some paths were not found when using the doit command

27/4/2017 1.4.4.0

    user visible changes client:
    * Calculation and reporting of number of bytes to sync by device/drive
    * Fix an error in calculation of the number of bytes to copy
    * Refactored InstlClientCopy.create_copy_instructions_for_file/dir_cont/dir, to reduce the amount of instructions created
    * Added InstlInstanceSync_url.chown_for_synced_folders to set synced files to current owner instead of root
    * no sync instruction pre/post instructions are produced if there are not files to sync

    programmer visible changes:
    * Removed InstlClientCopy.create_copy_instructions_for_files as !files sources no longer supported